added redwood & giant redwood added placement for huge white mushroom trees generate naturally from placers not modifiers